<resources>
    <string name="app_name">Damobobo</string>
    <string name="xiugainianling">修改年龄</string>
    <string name="shengri"><![CDATA[生 日：]]></string>
    <string name="xiugaimima">修改密码</string>
    <string name="chongfumima">重复密码：</string>
    <string name="xinmima"><![CDATA[新  密  码：]]></string>
    <string name="yuanmima"><![CDATA[原  密  码：]]></string>
    <string name="geregzhongxin">个人中心</string>
    <string name="zhanghao"><![CDATA[账 号：]]></string>
    <string name="nicheng"><![CDATA[昵 称：]]></string>
    <string name="sex"><![CDATA[性 别：]]></string>
    <string name="youxiang"><![CDATA[邮 箱：]]></string>
    <string name="paizhaopian">拍摄照片</string>
    <string name="xuanze">选择图片</string>
    <string name="xingushi">新的故事</string>
    <string name="tianxieneirong">此处填写故事详情</string>
    <string name="shuoshenme">说点什么？</string>
    <string name="gushixiangqing">故事详情</string>
    <string name="denglu"><![CDATA[登    陆]]></string>
    <string name="quzhuce">没有账号？点击注册</string>
    <string name="mima"><![CDATA[密 码：]]></string>
    <string name="xishuogushi">细说我们的故事</string>
    <string name="yonghudenglu">用户登陆</string>
    <string name="banquan">版权所有</string>
    <string name="wdgushi">我的故事</string>
    <string name="xianshineirong">显示内容</string>
    <string name="xiugainicheng">修改昵称</string>
    <string name="yonghuzhuce">用户注册</string>
    <string name="zhuce"><![CDATA[注    册]]></string>
    <string name="set">设置</string>
    <string name="kuliwm">鼓励我们</string>
    <string name="juanzhuwm">捐助我们</string>
    <string name="xingtongxx">系统消息</string>
    <string name="jianchagx">检查更新</string>
    <string name="changjianwt">常见问题</string>
    <string name="guanyuwm">关于我们</string>
    <string name="xiugaisex">修改性别</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="zuire">最热</string>
    <string name="zuixin">最新</string>
    <string name="xiugaiyouxiang">修改邮箱</string>
    <string name="wangshizatan">往事杂谈</string>
    <string name="liulanjilu">浏览记录</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="xitongset">系统设置</string>
    <string name="back"><![CDATA[退    出]]></string>
    <string name="zhanghaohint">请输入6-9位不能是中文</string>
    <string name="nichenghint">请输入6-9个字符串</string>
    <string name="mimahint">请输入6-8位英文开头的密码</string>
</resources>
