<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qf.damobobo.GushiActivity">
    <RelativeLayout
        android:background="@drawable/title_bg"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="60dp">
        <ImageButton
            android:layout_width="50dp"
            android:scaleType="centerInside"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_back"
            android:onClick="myClick_back"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:text="@string/xingushi"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_height="match_parent" />
        <ImageButton
            android:layout_width="40dp"
            android:scaleType="centerInside"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_send"
            android:onClick="myClick"
            android:layout_alignParentRight="true"
            android:layout_height="50dp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="70dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:background="@null"
            android:hint="@string/tianxieneirong"
            android:layout_marginBottom="15dp"
            android:id="@+id/ed_new_gushi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:weightSum="33"
        android:layout_height="40dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="16"
            android:text="@string/xuanze"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:background="#2A2A2A"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#3F3E3E"
            android:layout_height="match_parent"></LinearLayout>
        <Button
            android:layout_width="0dp"
            android:layout_weight="16"
            android:text="@string/paizhaopian"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:background="#2A2A2A"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
