<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E7E7E7"
    tools:context="com.qf.damobobo.GengGaiMiMaActivity">

    <RelativeLayout
        android:background="@drawable/title_bg"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="60dp">
        <ImageButton
            android:layout_width="50dp"
            android:scaleType="centerInside"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_back"
            android:onClick="myClick"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:text="@string/xiugaimima"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bujubj"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="#3b3b3b"
            android:layout_marginLeft="20dp"
            android:text="@string/yuanmima"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ed_yuanmima"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bujubj"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="#3b3b3b"
            android:layout_marginLeft="20dp"
            android:text="@string/xinmima"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="请输入6-8位英文开头"
            android:id="@+id/ed_newmima"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bujubj"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="#3b3b3b"
            android:layout_marginLeft="20dp"
            android:text="@string/chongfumima"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ed_zai"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:background="@drawable/title_bg"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="#fff"
        android:text="@string/xiugaimima"
        android:onClick="xiuGai"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>
